Updates from Overleaf

--- a/Paper/waterbottles.tex
+++ b/Paper/waterbottles.tex
@@ -276,9 +276,9 @@ Finally, we also wanted some understanding of different impacts on the water bot
 
 \begin{figure*}
     \centering
-    \includegraphics[width=2.25in]{Figures/ModePick_ex}
-    \includegraphics[width=2.25in]{Figures/DecayFit_ex}
-    \includegraphics[width=2.25in]{../Figures/HydroFlask/empty}
+    \includegraphics[width=2.25in]{../Figures/ModePick_ex}
+    \includegraphics[width=2.25in]{../Figures/DecayFit_ex}
+    \includegraphics[width=2.25in]{../Figures/Model_ex}
     \caption{\it{Modal analysis pipeline: (left) picking the mode frequencies,
     (center) estimating the decay rate of a single mode,
     (right) using a least-squares fit to estimate the complex
